inital geojsonsource refactoring to URI