@@ -2,8 +2,6 @@ package com.mapbox.mapboxandroiddemo.examples.styles;
 
 import android.graphics.Color;
 import android.os.Bundle;
-import androidx.annotation.NonNull;
-import androidx.appcompat.app.AppCompatActivity;
 
 import com.mapbox.mapboxandroiddemo.R;
 import com.mapbox.mapboxsdk.Mapbox;
@@ -14,8 +12,11 @@ import com.mapbox.mapboxsdk.maps.Style;
 import com.mapbox.mapboxsdk.style.layers.FillLayer;
 import com.mapbox.mapboxsdk.style.sources.GeoJsonSource;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+
+import androidx.annotation.NonNull;
+import androidx.appcompat.app.AppCompatActivity;
 
 import static com.mapbox.mapboxsdk.style.layers.PropertyFactory.fillColor;
 import static com.mapbox.mapboxsdk.style.layers.PropertyFactory.fillOpacity;
@@ -48,8 +49,8 @@ public class GeojsonLayerInStackActivity extends AppCompatActivity {
           @Override
           public void onStyleLoaded(@NonNull Style style) {
             try {
-              URL geoJsonUrl = new URL("https://d2ad6b4ur7yvpq.cloudfront.net/naturalearth-3.3.0/ne_50m_urban_areas.geojson");
-              GeoJsonSource urbanAreasSource = new GeoJsonSource("urban-areas", geoJsonUrl);
+              GeoJsonSource urbanAreasSource = new GeoJsonSource("urban-areas",
+                new URI("https://d2ad6b4ur7yvpq.cloudfront.net/naturalearth-3.3.0/ne_50m_urban_areas.geojson"));
               style.addSource(urbanAreasSource);
 
               FillLayer urbanArea = new FillLayer("urban-areas-fill", "urban-areas");
@@ -60,8 +61,8 @@ public class GeojsonLayerInStackActivity extends AppCompatActivity {
               );
 
               style.addLayerBelow(urbanArea, "water");
-            } catch (MalformedURLException malformedUrlException) {
-              malformedUrlException.printStackTrace();
+            } catch (URISyntaxException uriSyntaxException) {
+              uriSyntaxException.printStackTrace();
             }
           }
         });
